Fix cpu and memory && Fix overflow

--- a/src/app.sass
+++ b/src/app.sass
@@ -73,6 +73,8 @@
     background: #f7fbff
   .ant-table-thead > tr > th.ant-table-column-sort
     background: #dcebfa
+  .ant-table-body
+    overflow-x: auto
 
   // radio
   .ant-radio-button-wrapper:first-child
