--- a/src/components/base/rcTable.less
+++ b/src/components/base/rcTable.less
@@ -39,10 +39,10 @@
   }
 
   &-fixed-header &-scroll &-header {
-    overflow-x: scroll;
+    overflow-x: auto;
     padding-bottom: 20px;
     margin-bottom: -20px;
-    overflow-y: scroll;
+    overflow-y: auto;
     box-sizing: border-box;
   }
 
